[package]
name = "dutchroad"
version = "0.1.0"
authors = ["BlockCat <zinoonomiwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = {  version = "0.5.1" }
mint = "0.5"
shapefile = "0.2.2"
boundingbox = { path = "../boundingbox" }
aabb-quadtree = "0.2.0"

serde = "1.0.125"
bincode = "1.3.3"