[package]
name = "dutchroad"
version = "0.1.0"
authors = ["BlockCat <zinoonomiwo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = "0.5"
shapefile = "0.2.2"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.3"
kdtree = "0.6.0"
rayon = "1.5.0"